--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -7,7 +7,7 @@ server {
     }
 
     location ~ ^/index\.php(/|$) {
-        fastcgi_pass app_php:9000;
+        fastcgi_pass symfony_php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
