--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,7 @@
         }
     },
     "require-dev": {
+        "symfony/debug-bundle": "6.3.*",
         "symfony/maker-bundle": "^1.51"
     }
 }
