--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,6 +1,10 @@
 # config/routes/annotations.yaml
+api_controllers:
+    resource: ../../src/Api/Adapter/Framework/HTTP/Controller
+    type: annotation
 
-controllers:
+
+user_controllers:
     resource: ../../src/User/Adapter/Framework/HTTP/Controller
     prefix: user
     type: annotation
