--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,9 +1,9 @@
+imports:
+  - { resource: '../../src/User/Infrastructure/Symfony/Config/Package/user-doctrine.yaml' }
+
 doctrine:
   dbal:
     url: '%env(resolve:DATABASE_URL)%'
-    # IMPORTANT: You MUST configure your server version,
-    # either here or in the DATABASE_URL env var (see .env file)
-    # server_version: '15'
     profiling_collect_backtrace: '%kernel.debug%'
   orm:
     auto_generate_proxy_classes: true
@@ -12,13 +12,6 @@ doctrine:
     validate_xml_mapping: true
     naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
     auto_mapping: true
-    mappings:
-      User:
-        is_bundle: false
-        type: xml
-        dir: '%kernel.project_dir%/src/User/Adapter/Persistence/ORM/Doctrine/Mapping'
-        prefix: 'User\Domain\Model'
-        alias: User
 
 when@test:
   doctrine:
@@ -45,3 +38,4 @@ when@prod:
           adapter: cache.app
         doctrine.system_cache_pool:
           adapter: cache.system
+
