--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,6 @@
-twig:
-    default_path: '%kernel.project_dir%/templates'
+imports:
+  - { resource: '../../src/Home/Infrastructure/Config/Symfony/Packages/home-twig.yaml' }
 
 when@test:
-    twig:
-        strict_variables: true
+  twig:
+    strict_variables: true
