--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "symfony/serializer": "6.3.*",
         "symfony/uid": "6.3.*",
         "symfony/validator": "6.3.*",
-        "symfony/yaml": "6.3.*"
+        "symfony/yaml": "6.3.*",
+      "ext-pdo": "*"
     },
     "config": {
         "allow-plugins": {
