wip fast and not commit message :D

--- a/src/Common/Infrastructure/Config/Symfony/Service/common.yaml
+++ b/src/Common/Infrastructure/Config/Symfony/Service/common.yaml
@@ -5,10 +5,10 @@ services:
 
   Common\:
     resource: "../../../../../Common"
-#
-#  Common\Infrastructure\Adapter\REST\Symfony\Listener\JsonTransformerExceptionListener:
-#    tags:
-#      - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
+
+  Common\Infrastructure\Adapter\REST\Symfony\Listener\JsonTransformerExceptionListener:
+    tags:
+      - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
 
   #DependencyInyection
   Common\Infrastructure\Adapter\REST\Symfony\Resolver\:
