wip fast and not commit message :D

--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -9,5 +9,5 @@ home_controllers:
 
 user_controllers:
   resource: ../../src/User/Infrastructure/Adapter/REST/Symfony/Controller
-  prefix: user
+  prefix: /api/user
   type: annotation
