--- a/.env
+++ b/.env
@@ -44,11 +44,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 # RabbitMQ
-RABBITMQ_HOST=localhost
+RABBITMQ_HOST=symfony-rabbitmq
 RABBITMQ_PORT=5672
 RABBITMQ_LOGIN=user
-RABBITMQ_PASSWORD=123456789
+RABBITMQ_PASSWORD=password
 RABBITMQ_EXCHANGE=domain_events
 RABBITMQ_MAX_RETRIES=5
-# RabbitMQ - Application Specific
-RABBITMQ_MOOC_VHOST=/
+RABBITMQ_VHOST=/
