--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=5433eb2eab03838a4ec77148d44eea0d
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:root@symfony-mysql:3306/symfony-database?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://root:root@mysql:3306/symfony_database?serverVersion=8.0.32&charset=utf8mb4"
 
 # DATABASE_URL="mysql://root:root@symfony-mariadb:3306/symfony-database?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
@@ -44,7 +44,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 # RabbitMQ
-RABBITMQ_HOST=symfony-rabbitmq
+RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
 RABBITMQ_LOGIN=user
 RABBITMQ_PASSWORD=password
