--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,10 +102,10 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - "./docker/grafana/datasource.yml:/etc/grafana/provisioning/"
+      - "./docker/grafana/provisioning/:/etc/grafana/provisioning/"
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=123456
       - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_SECURITY_ADMIN_PASSWORD=123456
 networks:
   symfony_network:
 
