--- a/src/Common/Infrastructure/Config/Symfony/Service/common.yaml
+++ b/src/Common/Infrastructure/Config/Symfony/Service/common.yaml
@@ -77,8 +77,9 @@ services:
 
   # -- IMPLEMENTATIONS SELECTOR --
   Common\Domain\Bus\Event\EventBusInterface: '@Common\Infrastructure\Bus\Event\RabbitMQ\RabbitMqEventBus'
+
   Common\Infrastructure\Bus\Event\Monitoring\PrometheusMonitoringEventBus:
     arguments:
-      - '@Common\Infrastructure\Monitor\PrometheusMonitor'
-      - 'symfony-project'
-      - '@Common\Infrastructure\Bus\Event\RabbitMQ\RabbitMqEventBus'
+      - '@Common\Infrastructure\Bus\Event\RabbitMQ\RabbitMqEventBus' # EventBusInterface
+      - '@Common\Infrastructure\Monitor\PrometheusMonitor'           # PrometheusMonitor
+      - 'symfony_app'                                                        # string appName
