wip - add redis

--- a/.env
+++ b/.env
@@ -25,8 +25,6 @@ APP_SECRET=5433eb2eab03838a4ec77148d44eea0d
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 DATABASE_URL="mysql://root:root@mysql:3306/symfony_database?serverVersion=8.0.32&charset=utf8mb4"
-
-# DATABASE_URL="mysql://root:root@symfony-mariadb:3306/symfony-database?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -51,3 +49,7 @@ RABBITMQ_PASSWORD=password
 RABBITMQ_EXCHANGE=domain_events
 RABBITMQ_MAX_RETRIES=5
 RABBITMQ_VHOST=/
+
+#Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
