--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "symfony/serializer": "6.3.*",
         "symfony/uid": "6.3.*",
         "symfony/validator": "6.3.*",
-        "symfony/yaml": "6.3.*"
+        "symfony/yaml": "6.3.*",
+        "ext-redis": "*"
     },
     "config": {
         "allow-plugins": {
