--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -14,7 +14,7 @@ scrape_configs:
   - job_name: 'mysql_exporter'
     scrape_interval: 5s
     static_configs:
-      - targets: [ 'mysql-exporter:9104' ]
+      - targets: [ 'mysql_exporter:9104' ]
 
   - job_name: 'redis'
     static_configs:
