--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@
 ###< lexik/jwt-authentication-bundle ###
 
 /http-client
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
