--- a/composer.json
+++ b/composer.json
@@ -88,6 +88,7 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.40",
         "phpat/phpat": "^0.10.11",
         "phpro/grumphp-shim": "^2.3",
         "phpstan/phpstan": "^1.10",
